--- a/style2.css
+++ b/style2.css
@@ -28,3 +28,17 @@ body {
     font-size: 11px;
     height: 252px;
 }
+.name{
+    padding: 30px 70px;
+    display: flex;
+    justify-content: space-between;
+}
+.wang{
+    font-size: 55px;
+}
+.job-q{    
+    font-size: 24px;
+    position: relative;
+    top: 35px;
+    font-weight: 100;
+}
