--- a/style2.css
+++ b/style2.css
@@ -114,6 +114,7 @@ body {
 .item-des{
     position: relative;
     bottom: 35px;
+    font-weight: 300;
 }
 .meituan{
     padding: 30px 10px 18px;
@@ -166,4 +167,14 @@ body {
     display: flex;
     justify-content: space-between;
     padding: 46px 22px 21px;
+    line-height: 35px;
+}
+.another{
+    padding: 10px;
+}
+.itemdes{
+    font-weight: 300;
+}
+.item-name{
+    font-weight: 700;
 }
