--- a/style2.css
+++ b/style2.css
@@ -8,11 +8,14 @@ body {
     margin-left: auto;
     margin-right: auto;
     width: 1024px;
+    padding-top:20px;
 }
 .dingbu{
     margin-top: 33px;
     color: #bbb;
     font-size: 12px;
+    display: flex;
+    justify-content: space-between;
 }
 .l{
     color: rgb(248, 245, 245);
