--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
 }
 
 .html {
-    width: 20%;
+    width: 25%;
     float: left;
     transition: 0.3s;
     line-height: 26px;
@@ -59,7 +59,7 @@ h3 {
 
 .css {
     float: left;
-    width: 20%;
+    width: 25%;
     transition: 0.3s;
     line-height: 21px;
     background: pink;
@@ -86,11 +86,15 @@ h2 {
 }
 
 .flex {
-    float: left;
+    width: 18%;
+    float: right;
     transition: 0.3s;
     background: pink;
     border-radius: 10px;
     border: 3px solid #fafafa;
+    top: 0px;
+    position: relative;
+    left: 309px;
 }
 
 .flex:hover {
@@ -106,9 +110,10 @@ h2 {
 }
 
 .float {
-    top: 355px;
-    float: left;
-    right: 190px;
+    width: 18%;
+    top: 150px;
+    float: right;
+    left: 200px;
     transition: 0.3s;
     background: pink;
     position: relative;
@@ -137,8 +142,10 @@ h2 {
 }
 
 .heibai {
-    float: left;
-    right: 135px;
+    width: 18%;
+    float: right;
+    right: 95px;
+    bottom: 1px;
     transition: 0.3s;
     background: pink;
     position: relative;
@@ -172,8 +179,9 @@ a:hover {
 }
 
 .html3 {
-    float: left;
-    right: -4px;
+    width: 25%;
+    float: right;
+    right: 383px;
     transition: 0.3s;
     background: pink;
     position: relative;
