--- a/style.css
+++ b/style.css
@@ -12,19 +12,19 @@ h1 {
     padding-left: 20px;
 }
 
+li {
+    color: #3f3a64;
+}
+
 h2 {
     font-size: 20px;
     padding-left: 20px;
 }
 
 a {
-    color: #3f3a64;
+    color: #8e43e7;
     transition: 0.3s;
     text-decoration: none;
-}
-
-a:hover {
-    color: white;
 }
 
 .display {
@@ -71,7 +71,7 @@ a:hover {
 
 .heibai {
     top: 367px;
-    right: 185px;
+    right: 193px;
     width: 190px;
     height: 150px;
     position: relative;
