--- a/style.css
+++ b/style.css
@@ -1,24 +1,14 @@
 ul {
-    margin: 0;
     list-style: decimal;
 }
 
-body {
-    margin: 0;
-}
-
 h1 {
-    font-size: 23px;
-    padding-left: 20px;
+    font-size: 25px;
+    padding-left: 10px;
 }
 
 li {
     color: #3f3a64;
-}
-
-h2 {
-    font-size: 20px;
-    padding-left: 20px;
 }
 
 a {
@@ -28,51 +18,45 @@ a {
 }
 
 .display {
-    padding: 25px;
     display: flex;
     justify-content: start;
 }
 
 .html {
-    width: 245px;
+    width: 20%;
+    height: 2%;
     line-height: 25px;
     margin-right: 15px;
+    padding-right: 15px;
     border-radius: 10px;
     background: #fafafa;
     border: 1px solid #754ef9;
 }
 
 .css {
-    width: 240px;
-    line-height: 21px;
+    width: 23%;
     margin-right: 15px;
+    padding-left: 10px;
     border-radius: 10px;
     background: #fafafa;
     border: 1px solid #754ef9;
 }
 
-.html3 {
-    width: 255px;
-    margin-right: 15px;
-    position: relative;
-    border-radius: 10px;
-    background: #fafafa;
-    border: 1px solid #754ef9;
-}
 
 .flex {
-    width: 192px;
-    height: 355px;
+    height: 40%;
     margin-right: 15px;
     position: relative;
+    padding-right: 15px;
     border-radius: 10px;
     background: #fafafa;
     border: 1px solid #754ef9;
 }
 
 .heibai {
-    width: 190px;
-    height: 150px;
+   padding-right: 12px;
+
+    height: 20%;
     border-radius: 10px;
     background: #fafafa;
     border: 1px solid #754ef9;
